--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
 <router-outlet></router-outlet>
+-----------------------
 <app-ejercicio1></app-ejercicio1>
+-----------------------
+<app-ejercicio2></app-ejercicio2>
