--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,3 +3,5 @@
 <app-ejercicio1></app-ejercicio1>
 -----------------------
 <app-ejercicio2></app-ejercicio2>
+-----------------------
+<app-ejercicio3></app-ejercicio3>
