ejercicio4 completo, ejercicio 5 creado

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,3 +5,5 @@
 <app-ejercicio2></app-ejercicio2>
 -----------------------
 <app-ejercicio3></app-ejercicio3>
+-----------------------
+<app-ejercicio4></app-ejercicio4>
