--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,3 +7,5 @@
 <app-ejercicio3></app-ejercicio3>
 -----------------------
 <app-ejercicio4></app-ejercicio4>
+-----------------------
+<app-ejercicio5></app-ejercicio5>
