--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,3 +9,7 @@
 <app-ejercicio4></app-ejercicio4>
 -----------------------
 <app-ejercicio5></app-ejercicio5>
+-----------------------
+<app-ejercicio6></app-ejercicio6>
+-----------------------
+<app-ejercicio7></app-ejercicio7>
