los 12 ejercicios acabados!

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,3 +13,13 @@
 <app-ejercicio6></app-ejercicio6>
 -----------------------
 <app-ejercicio7></app-ejercicio7>
+-----------------------
+<app-ejercicio8></app-ejercicio8>
+-----------------------
+<app-ejercicio9></app-ejercicio9>
+-----------------------
+<app-ejercicio10></app-ejercicio10>
+-----------------------
+<app-ejercicio11></app-ejercicio11>
+-----------------------
+<app-ejercicio12></app-ejercicio12>
